# adaptive-spec-search

./: .gitignore  AUTO_GRILL.md  PORTING-DECISION-REQUIRED.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/adaptive_spec_search/: __init__.py  engine.py
tests/: test_engine.py
