[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-spec-search"
version = "0.1.0"
description = "Local-first hybrid retrieval with conservative query expansion and relevance feedback"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "sukwoo0711-maker"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
xlsx = ["openpyxl>=3.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_spec_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
